--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
     <script src="https://rawgit.com/wmurphyrd/aframe-super-hands-component/master/dist/super-hands.js"></script>
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
+    <script src="build.js"></script>
 </head>
 
 <body>
@@ -29,12 +31,31 @@
             <a-entity sphere-collider="objects: a-gltf-model" super-hands hand-controls="hand: right"></a-entity>
         </a-entity>
 
+        <a-entity id="cameraRig">
+            <a-camera id="camera">
+            </a-camera>
+            <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: .screen"></a-entity>
+            <a-entity laser-controls raycaster="objects: .screen;"></a-entity>
+        </a-entity>
+
+        <a-entity id="menu" class="screen menu dark" htmlembed="ppu:256" position="0.04 1.11 -1.576" rotation="-8 0 0" scale="0.39 0.39">
+            <h2>Development</h2>
+            <a href="https://www.tiktok.com/@therke.com/video/6906542886792301826" target="_blank" class="button"><img src="assets/VideoThumbnails/Dev-Day1.png" width="48px" height="64px"></a>
+            <a href="https://www.tiktok.com/@therke.com/video/6906554773328252161" target="_blank" class="button"><img src="assets/VideoThumbnails/Dev-Day1b.png" width="48px" height="64px"></a>
+            <a href="https://www.tiktok.com/@therke.com/video/6906728406281456898" target="_blank" class="button"><img src="assets/VideoThumbnails/Dev-Day2.png" width="48px" height="64px"></a>
+            <a href="https://www.tiktok.com/@therke.com/video/6906889114096831745" target="_blank" class="button"><img src="assets/VideoThumbnails/Dev-Day2a.png" width="48px" height="64px"></a>
+            <a href="#" target="_blank" class="button"><img src="assets/VideoThumbnails/Dev-Day3.png" width="48px" height="64px"></a>
+        </a-entity>
+
+        <a-entity htmlembed position="0.04 1.11 -1.576" rotation="-8 0 0" scale="0.39 0.39">
+
+        </a-entity>
+
         <a-light color="white" position="0 2.2 0" type="point"></a-light>
 
         <a-gltf-model src="assets/Mountains.glb" position="-75 -25 -260" rotation="0 270 0"></a-gltf-model>
 
         <a-plane rotation="0 0 0" position="1.45 1.3 -1.865" scale="0.8 1 1" src="assets/corkboard.jpg"></a-plane>
-        
 
         <a-text value="News Board" position="1.1 1.7 -1.864" scale="0.5 0.5" color="white" shadow></a-text>
         <a-text value="Welcome!" position="1.1 1.56 -1.864" scale="0.5 0.5" color="white" shadow></a-text>
@@ -44,21 +65,25 @@
 
         <a-plane rotation="0 90 0" position="-1.865 1.3 -1.35" scale="0.8 1 1" src="assets/corkboard.jpg"></a-plane>
 
-        <a-gltf-model src="assets/Room.glb" shadow="cast:true; receive:true"></a-gltf-model>
+        <a-gltf-model src="assets/Room.glb" ></a-gltf-model>
         <a-plane rotation="0 0 0" position="0 1.3 -2" scale="2.5 1.5 1" src="assets/glass.png" transparent="true" alpha-test="0.47"></a-plane>
 
-        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" position="-0.5 0.15 -1.26" shadow="cast:true; receive:true"></a-gltf-model>
-        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/chairDesk.glb" scale="1.5 1.5 1.5" rotation="0 -142 0" position="0.35 0.15 -1.2" shadow="cast:true; receive:true"></a-gltf-model>
-        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/computerKeyboard.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="-0.185 0.75 -1.27" shadow="cast:true; receive:true"></a-gltf-model>
-        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/computerMouse.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="0.35 0.75 -1.25" shadow="cast:true; receive:true"></a-gltf-model>
-        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/computerScreen.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="-0.25 0.75 -1.5" shadow="cast:true; receive:true"></a-gltf-model>
+        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" position="-0.5 0.15 -1.26" ></a-gltf-model>
+        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/chairDesk.glb" scale="1.5 1.5 1.5" rotation="0 -142 0" position="0.35 0.15 -1.2" ></a-gltf-model>
+        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/computerKeyboard.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="-0.185 0.75 -1.27" ></a-gltf-model>
+        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/kenney.nl/furnatureKit/computerMouse.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="0.35 0.75 -1.25" ></a-gltf-model>
+        <a-gltf-model src="assets/kenney.nl/furnatureKit/computerScreen.glb" scale="1.5 1.5 1.5" rotation="0 0 0" position="-0.25 0.75 -1.5" ></a-gltf-model>
 
-        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" rotation="0 -90 0" position="1.27 0.15 -0.2" shadow="cast:true; receive:true"></a-gltf-model>
-        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" rotation="0 90 0" position="-1.27 0.15 1.75" shadow="cast:true; receive:true"></a-gltf-model>
+        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" rotation="0 -90 0" position="1.27 0.15 -0.2" ></a-gltf-model>
+        <a-gltf-model src="assets/kenney.nl/furnatureKit/desk.glb" scale="1.5 1.5 1.5" rotation="0 90 0" position="-1.27 0.15 1.75" ></a-gltf-model>
 
         <a-entity position="0 2.5 -60" particle-system="preset: snow; particleCount: 550"></a-entity>s
 
+        <a-gltf-model src="assets/SpaceSemiSphere.glb" scale="1.5 1.5 1.5" rotation="0 90 0" position="1.27 0.15 -0.2"></a-gltf-model>
+        <a-gltf-model hoverable grabbable stretchable draggable dropppable src="assets/Hubble.glb" scale="0.05 0.05 0.05" rotation="90 0 0" position="0 1.75 2.2"></a-gltf-model>
 
 
     </a-scene>
-</body></html>
+</body>
+
+</html>
