--- a/src/test.html
+++ b/src/test.html
@@ -1,246 +1,58 @@
-
-<!doctype html>
 <html>
   <head>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <title>A-Frame Super Hands Component - Pointer Controls</title>
+    <!-- Replace "../build.js" with the super-hands and
+         A-Frame distributions to run : -->
     <script src="../build.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <style>
-    body{
-      font-family: 'Roboto', sans-serif;
-      text-shadow: 0px 0px 10px #00d2ff;
-      color: #fff;
-      font-size: 32px;
-    }
-    h1{
-      font-size: 52px;
-    }
-    .dark{
-      background-color: rgba(0,0,0,0.2);
-      border-radius:50px;  
-      background-repeat: no-repeat;
-      background-position: bottom right;
-      padding: 40px;
-    }
-    .main{
-      width: 1024px;
-      height: 768px;
-      overflow: hidden;
-    }
-    .menu{
-      width: 256px;
-      height: 768px;
-      text-align: center;
-    }
-    .menu ul{
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-    a.button{
-      display: inline-block;
-      width: 100%;
-      border-radius: 20px;
-      background-color: #000;
-      color: #fff;
-      text-decoration: none;
-      text-align: center;
-      padding: 10px 0;
-      margin-bottom: 20px;
-    }
-    a.button:hover{
-      background-color: #fff;
-      color: #888;
-    }
-    a.button:active{
-      background-color: #fff;
-      color: #888;
-      box-shadow: 0px 0px 50px #00d2ff;
-    }
-    a.imgLink{
-      width: 100%;
-      border-radius: 20px;
-      color: #fff;
-      text-decoration: none;
-      text-align: center;
-      padding: 10px 0;
-      margin-bottom: 20px;
-      background-color: #444;
-      border: 3px solid #444;
-      text-shadow: none;
-      display: block;
-    }
-    a.imgLink:hover{
-      border: 3px solid #fff;
-      background-color: #444;
-    }
-    .code{
-      white-space: pre;
-      font-size: 0.7em;
-      background-color: #000;
-      margin-bottom: 30px;
-    }
-    .next,.prev{
-      position: absolute;
-      bottom: 0px;
-      right: 30px;
-      display: inline-block;
-      width: auto !important;
-      padding: 20px 30px !important;
-    }
-    .prev{
-      right: auto;
-      left: 30px;
-    }
-    #page1{
-      position: relative;
-      height: 100%;
-    }
-    #page2, #page3, #page4{
-      display: none;
-      position: relative;
-      height: 100%;
-    }
-    .slide{
-      height:100%;
-    }
-    .slide:target #page1{
-      display: none;
-    }
-    #slide2:target #page2{
-      display: block;
-    }
-    #slide3:target #page3{
-      display: block;
-    }
-    #slide4:target #page4{
-      display: block;
-    }
-    #page4 ul{
-      list-style-type: square;
-      font-size: 0.8em;
-    }
-    </style>
-    <script>
-    AFRAME.registerComponent('showbutton', {
-      schema: {
-        'target': {type: 'selector'},
-      },
-      init: function () {
-        var show=false;    
-        this.el.addEventListener("click",()=>{
-          if(show){
-            this.data.target.setAttribute("visible","false");
-            this.el.querySelector("a").innerHTML="Show Box";
-          }else{
-            this.data.target.setAttribute("visible","true");
-            this.el.querySelector("a").innerHTML="Hide Box";
-          }
-          show=!show;
-        });
-      }
-    });
-    </script>
+    <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/super-hands/dist/super-hands.min.js"></script> -->
+    <script src="https://unpkg.com/aframe-event-set-component@^4.0.0/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../assets/examples.css">
   </head>
   <body>
-    <div id="slide2" class="slide">
-    <div id="slide3" class="slide">
-    <div id="slide4" class="slide">
-    <a-scene fog="type: linear; color: #222222; far: 20;">
+    <a-scene environment="preset: default; shadow: true" avatar-recorder
+             touch-to-click-converter>
       <a-assets>
-        <img id="floor" src="assets/floor.png">
-        <img id="tex1" src="assets/box.png">
+        <img id="portals-preview" src="../assets/portals.jpg"></img>
+        <a-mixin id="cube" geometry="primitive: box; width: 0.5; height: 0.5; depth: 0.5"
+                 hoverable grabbable stretchable draggable droppable
+                 shadow
+                 event-set__dragdrop="_event: drag-drop; geometry.primitive: sphere; geometry.radius: 0.25"
+                 event-set__hoveron="_event: hover-start; material.opacity: 0.7; transparent: true"
+                 event-set__hoveroff="_event: hover-end; material.opacity: 1; transparent: false"
+                 event-set__dragon="_event: dragover-start; material.wireframe: true"
+                 event-set__dragoff="_event: dragover-end; material.wireframe: false">
+        </a-mixin>
       </a-assets>
-      <a-plane material="src:#floor; repeat: 700 700; transparent: true;" height="500" width="500" rotation="-90 0 0"></a-plane>
-      <a-sky color="#222222"></a-sky>
-      <a-entity id="cameraRig">
-        <a-camera id="camera">
-        </a-camera>
-        <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: .screen"></a-entity>
-        <a-entity laser-controls raycaster="objects: .screen;"></a-entity>
+      <a-entity camera wasd-controls position="0 1 1"
+                capture-mouse
+                raycaster="objects: .cube" cursor="rayOrigin:mouse"
+                static-body="shape: sphere; sphereRadius: 0.001"
+                super-hands="colliderEvent: raycaster-intersection;
+                             colliderEventProperty: els;
+                             colliderEndEvent:raycaster-intersection-cleared;
+                             colliderEndEventProperty: clearedEls;">
       </a-entity>
-      <a-entity id="menu" class="screen menu dark" htmlembed="ppu:256" position="-2.712 2.5 -4.476" rotation="0 45 0">
-        <h2>Menu</h2>
-        <ul>
-          <li><a href="#" class="button">Home</a></li>
-          <li><a href="#slide2" class="button">CSS</a></li>
-          <li><a href="#slide3" class="button">Interactivity</a></li>
-          <li><a href="#slide4" class="button">Limitations</a></li>
-        </ul>
-      </a-entity>
-      <a-entity id="main" class="screen dark main" htmlembed="ppu:256" position="0 2.5 -5">
-        <div id="page1">
-          <h1>A-Frame HTML Embed Component</h1>
-          <p>HTML Embed is a component created for A-Frame. The HTML Embed component allows for arbitrary html to be inserted into your aframe scene. It allows you to update the display within A-Frame simply by manipulating the DOM as you normally would. 
-          </p>
-          <p>
-      In addition to rendering the html to the A-Frame scene it allows for interaction. Most css pseudo selectors such as hover, active, focus and target should work with interactivity enabled without any modifications to your css. Mouse events can be attached to the html elements as usual. </p>
-          <a href="#slide2" class="button next">Next Page</a>
-        </div>
-        <div id="page2">
-          <h1>Cascading Style Sheets (CSS)</h1>
-          <p>HTML Embed allows you to add interactivity by adding standard css interactions such as hover:
-          <div class="code">
-          .button{
-	          color: #000000;
-          }
-          .button:hover{
-	          color: #ffffff;
-          }
-          </div>
-          <div class="code">
-            &lt;a-scene&gt;
-	            &lt;a-entity htmlembed&gt;
-		            &lt;a href="#home" class="button">Home&lt;/a&gt;
-	            &lt;/a-entity&gt;
-            &lt;/a-scene&gt;
-          </div>
-          <a href="#" class="button prev">Prev Page</a>
-          <a href="#slide3" class="button next">Next Page</a>
-        </div>
-        <div id="page3">
-          <h1>Interactivity</h1>
-          <p>You can add javascript interactivity in the standard way either by events on the elements themselves or alternatively by adding event listeners to the DOM.</p>
-          <div class="code">  
-          cubebutton.addEventListener("click",function(){
-            if(show){
-              box.setAttribute("visible","false");
-              cubebutton.innerHTML="Show Box";
-            }else{
-              box.setAttribute("visible","true");
-              cubebutton.innerHTML="Hide Box";
-            }
-            show=!show;
-          });
-          </div>
-          <a-entity showbutton="target:#box"><a class="button" href="javascript:void(0)">Show Box</a></a-entity>
-          <a href="#slide2" class="button prev">Prev Page</a>
-          <a href="#slide4" class="button next">Next Page</a>
-        </div>
-        <div id="page4">
-          <h1>Limitations</h1>
-          <ul>
-            <li>All styles and images must be in the same origin or allow access via CORS; this allows the component to embed all of the assets required to render the html properly to the canvas via the foreignObject element. </li>
-            <li>transform-style css is limited to flat. This is mainly due to it not being rendered properly to canvas so element bounding for preserve-3d has not yet been implemented. If the rendering is fixed as some point I may go back and get it working as well.</li>
-            <li>"a-" tags do not render correctly as XHTML embeded into SVG, so any parent "a-" elements of the embed html will be converted to div tags for rendering. This may mean your css will require modification.</li>
-            <li>Elements that require rendering outside of the DOM such as the iframe and canvas element will not work.
-            <li>:before and :after pseudo elements can't be accessed via the DOM so they can't be used in the element to determine the object bounds. As such, use them with caution. </li>
-            <li>Form elements are not consistently rendered to the canvas element so some basic default styles are included for consistency.</li>
-            <li>Currently there is no support for css transitions.</li>
-          </ul>
-          <a href="#slide3" class="button prev">Prev Page</a>
-        </div>
-      </a-entity>
-      <a-entity id="menu" class="screen menu dark" htmlembed="ppu:256" position="2.712 2.5 -4.476" rotation="0 -45 0">
-        <h2>Links</h2>
-        <a class="imgLink" href="https://aframe.io/"><img src="assets/aframe.png" width="80" height="80"><div>A-Frame</div></a>
-        <a class="imgLink" href="https://github.com/supereggbert/aframe-htmlembed-component"><img src="assets/github.png" width="80" height="80"><div>Github</div></a>
-        <a class="imgLink" href="https://www.npmjs.com/package/aframe-htmlembed-component"><img src="assets/npm.png" width="80" height="80"><div>npm</div></a>
-      </a-entity>
-      <a-box material="src:#tex1" scale="0.5 0.5 0.5" position="0 0.5 -4" id="box" visible="false"></a-box>
+      <a-entity class="cube" mixin="cube" position="0 1 -1.25" material="color: red"></a-entity>
+      <a-entity class="cube" mixin="cube" position="0 1.6 -1.5" material="color: red"></a-entity>
+      <a-entity class="cube" mixin="cube" position="-0.9 1 -0.9" material="color: blue"></a-entity>
+      <a-entity class="cube" mixin="cube" position="-1 1.6 -1" material="color: blue"></a-entity>
+      <a-entity class="cube" mixin="cube" position="0.9 1 -0.9" material="color: green"></a-entity>
+      <a-entity class="cube" mixin="cube" position="1 1.6 -1" material="color: green"></a-entity>
+      <a-link href="../portals.html" title="Other Examples"
+              image="#portals-preview"
+              onmouseover="this.setAttribute('link', {highlighted: true})"
+              onmouseout="this.setAttribute('link', {highlighted: false})"
+              position = "0 1.6 0.7" rotation="0 0 0" scale="0.25 0.25 0.25">
+      </a-link>
     </a-scene>
-    </div>
-    </div>
-    </div>
+    <!-- GitHub Corner. -->
+    <a href="https://github.com/wmurphyrd/aframe-super-hands-component" class="github-corner">
+      <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#222; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
+        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+      </svg>
+    </a>
+    <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
   </body>
 </html>
